# hasken

./: .gitignore  .stylish-haskell.yaml  Dockerfile  Document.hs  HLint.hs  LICENSE  Main.hs  Makefile  Procfile  README.md  circle.yml  hasken.cabal  hasken.yml.sample  index.html  params.json  stack.yaml
Data/: Hasken.hs
Data/Hasken/: Types.hs
Network/: System.hs
backend/: README.md  hasken-server.cabal
backend/executable/: Main.hs
backend/src/: Markdown.hs  Remote.hs
backend/src/Remote/: .#Main.hs  Client.hs  Config.hs  Server.hs
cli/: Config.hs  Local.hs  hasken.cabal
cli/Local/: Sync.hs
cli/Remote/: API.hs  Client.hs  Database.hs  Main.hs  Server.hs
executable/: Main.hs
frontend/: Makefile  bower.json  elm-package.json  index.html
frontend/src/: Component.elm  Main.elm  Main.purs
lib/: Config.hs  HaskenConfig.hs  Local.hs  Remote.hs
lib/Local/: Config.hs  Document.hs  Sync.hs
lib/Remote/: API.hs  Client.hs  Database.hs  Main.hs  Server.hs
server/: README.md  document-store.cabal  stack.yaml
server/src/: Main.hs
server/src/DocumentStore/: API.hs  Database.hs  Server.hs  Types.hs
server/test/: ServerSpec.hs
site/: Document.tywi  Makefile  elm-package.json  index.html
site/css/: default.css
site/src/: Component.elm  Main.elm
src/: Config.hs  Document.hs  Main.hs  Sync.hs
src/Remote/: API.hs  Client.hs  Database.hs  Server.hs  Types.hs
test/: Hasken.hs  HaskenSpec.hs
test/Spec/: LocalSpec.hs  RemoteSpec.hs
tests/: Hasken.hs
